# GuidedResearch

./: .gitignore  README.md  architecture.drawio  architecture.html  index.md  roadrunner_application
camera_stabilization/cpp/: .gitignore  BackgroundSegmentation.h  CMakeLists.txt  DynamicCalibration.hpp  OpticalFlow.h  Utils.hpp  compare_scale_factors.cpp  doxyfile  main.cpp  main_all.cpp  teamscale_plugin_mappings.properties  visualize_feature_matching.cpp  visualize_keyframe_update.cpp
camera_stabilization/cpp/lib/: CMakeLists.txt  Camera.cpp  Camera.hpp  CameraPoseEstimation.cpp  CameraPoseEstimation.hpp  DynamicStabilization.cpp  DynamicStabilization.hpp  FeatureDetection.cpp  FeatureDetection.hpp  FeatureMatching.cpp  FeatureMatching.hpp  Intrinsics.hpp  OpticalFlow.cpp  PerspectiveProjection.cpp  PerspectiveProjection.hpp  RenderingPipeline.cpp  RenderingPipeline.hpp  Residuals.cpp  Residuals.hpp  TemplateMatcher.cpp  TemplateMatcher.hpp  TimeMeasurable.hpp  Watersheder.cpp  Watersheder.hpp  WorldObjects.cpp  WorldObjects.hpp
camera_stabilization/cpp/misc/: s40_n_cam_far_calibration_test_image_template.xcf
camera_stabilization/cpp/run/: CMakeLists.txt  Commons.cpp  Commons.hpp  VisualizeCeres.cpp  VisualizeDynamicStabilization.cpp  VisualizeOpticalFlow.cpp  VisualizeRectangleWatershed.cpp  VisualizeRenderingPipeline.cpp  VisualizeStaticCalibration.cpp  VisualizeTemplateMatcher.cpp  VisualizeTrackBar.cpp  VisualizeWatershed.cpp  VisualizeWatersheder.cpp
camera_stabilization/cpp/runnable/: CMakeLists.txt  Commons.hpp  VisualizeDynamicStabilization.cpp
camera_stabilization/cpp/runnables/: CMakeLists.txt  Commons.cpp  Commons.hpp  RunnablesCommons.cpp  RunnablesCommons.hpp  VisualizeBackgroundSegmentation.cpp  VisualizeDynamicStabilization.cpp  VisualizeFeatureDetection.cpp  VisualizeFeatureMatching.cpp  VisualizeOpticalFlow.cpp  VisualizeStaticCalibration.cpp
camera_stabilization/cpp/test/: BackgroundSubtractorTests.cpp  CMakeLists.txt  CameraPoseEstimationTests.cpp  CameraTestBase.cpp  CameraTestBase.hpp  CameraTests.cpp  DynamicStabilizationTests.cpp  FeatureDetectorTests.cpp  FeatureMatcherTests.cpp  ImageTestBase.cpp  ImageTestBase.hpp  PerspectiveProjectionTests.cpp  RenderingPipelineTests.cpp  ResidualsTest.cpp
camera_stabilization/cpp/tests/: BackgroundSubtractorTests.cpp  CameraTestBase.hpp  CameraTests.cpp  DynamicStabiliationTests.cpp  FeatureDetectorTests.cpp  FeatureMatcherTests.cpp  ImageTestBase.cpp  ImageTestBase.hpp  PerspectiveProjectionTests.cpp  StabilizerTests.cpp  TestBase.cpp  TestBase.hpp  tests.cpp
catkin_ws/src/providentia_camera_replay/: CMakeLists.txt  package.xml  setup.py
cmake/: CMakeLists.txt  main.cpp
cmake/cuda/: CMakeLists.txt
cmake/cuda/src/: add.cu  add_cuda
cmake/plain/: CMakeLists.txt  curve_fitting_data.hpp  dense_optical_flow.cpp  main.cpp  video_and_flow.cpp
hd_map_processing/cpp/: CMakeLists.txt  main.cpp
implementation/: .gitignore  CMakeLists.txt  README.md  setup_opencv.sh  teamscale_plugin_mappings.properties
implementation/cpp/lib/: CMakeLists.txt  CameraPoseEstimation.cpp  CameraPoseEstimation.hpp  FeatureDetection.hpp  OpticalFlow.hpp  TimeMeasurable.cpp  WorldObjects.hpp
implementation/cpp/run/: VisualizeDynamicStabilization.cpp  VisualizeOpticalFlow.cpp
implementation/cpp/test/: CMakeLists.txt  CameraPoseEstimationTests.cpp  ImageTestBase.hpp  PerspectiveProjectionTests.cpp  RenderingPipelineTests.cpp  ResidualsTest.cpp
implementation/evaluation/: CMakeLists.txt  CSVWriter.cpp  CSVWriter.hpp  Commons.cpp  Commons.hpp  DrawUnitCircle.cpp  EvaluateDynamicStabilization.cpp  EvaluateExpectableError.cpp  EvaluateObjectTracking.cpp  EvaluateOpticalFlow.cpp  EvaluateStaticCalibration.cpp  ObjectTracking.cpp  ObjectTracking.hpp  OpticalFlow.cpp  OpticalFlow.hpp  VisualizeBackgroundSegmentation.cpp  VisualizeDynamicStabilization.cpp  VisualizeFeatureDetection.cpp  VisualizeFeatureMatching.cpp  VisualizeOpticalFlow.cpp  VisualizeRenderingPipeline.cpp  VisualizeStaticCalibration.cpp
implementation/examples/: CMakeLists.txt  Commons.cpp  Commons.hpp  VisualizeBackgroundSegmentation.cpp  VisualizeDynamicStabilization.cpp  VisualizeFeatureDetection.cpp  VisualizeFeatureMatching.cpp  VisualizeOpticalFlow.cpp  VisualizeRenderingPipeline.cpp  VisualizeStaticCalibration.cpp
implementation/lib/: BackgroundSegmentation.cpp  BackgroundSegmentation.hpp  CMakeLists.txt  CMakeLists.txt.in  CSVWriter.cpp  CSVWriter.hpp  CameraPoseEstimation.cpp  CameraPoseEstimation.hpp  DynamicStabilization.cpp  DynamicStabilization.hpp  FeatureDetection.cpp  FeatureDetection.hpp  FeatureMatching.cpp  FeatureMatching.hpp  FrameWarping.cpp  FrameWarping.hpp  Geometry.cpp  Geometry.hpp  HDMap.cpp  HDMap.hpp  Intrinsics.cpp  Intrinsics.hpp  ObjectsLoading.cpp  ObjectsLoading.hpp  OpenDRIVE.cpp  OpenDRIVE.hpp  OpticalFlow.cpp  OpticalFlow.hpp  RenderingPipeline.cpp  RenderingPipeline.hpp  Residuals.cpp  Residuals.hpp  TimeMeasurable.cpp  TimeMeasurable.hpp  Watersheder.hpp  WorldObjects.cpp  WorldObjects.hpp
implementation/lib/calibration/: CMakeLists.txt  CameraPoseEstimation.cpp  CameraPoseEstimation.hpp  CorrespondenceResidual.cpp  CorrespondenceResidual.hpp  DistanceFromIntervalResidual.hpp  DistanceResidual.cpp  DistanceResidual.hpp  ObjectsLoading.cpp  ObjectsLoading.hpp  ParametricPoint.hpp  (+6 more)
implementation/misc/: CMakeLists.txt  objects.yaml  pixels.yaml  test_xml.xodr
implementation/run/: CMakeLists.txt  Commons.cpp  VisualizeBackgroundSegmentation.cpp  VisualizeDynamicStabilization.cpp  VisualizeFeatureMatching.cpp  VisualizeHDMapParser.cpp  VisualizeWatersheder.cpp  evaluation.md
implementation/standalone/: CMakeLists.txt  Watershed.cpp
implementation/test/: BackgroundSegmentationTests.cpp  BackgroundSubtractorTests.cpp  CMakeLists.txt  CameraPoseEstimationTests.cpp  CameraTestBase.hpp  DynamicStabilizationTests.cpp  FeatureDetectorTests.cpp  FeatureMatcherTests.cpp  HDMapTests.cpp  ImageTestBase.hpp  ObjectsLoadingTests.cpp  PerspectiveProjectionTests.cpp  RenderingPipelineTests.cpp  ResidualsTests.cpp
(+295 files in other folders)
