cmake_minimum_required(VERSION 3.10)

########################################################################################################################
### Project definition ###
########################################################################################################################
project(CameraStabilization C CXX)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")

########################################################################################################################
### Library ###
########################################################################################################################
add_subdirectory(library)

########################################################################################################################
### Runnables ###
########################################################################################################################
add_subdirectory(runnable)

################################################################################################
### Miscellaneous ###
########################################################################################################################
add_subdirectory(misc)

########################################################################################################################
### Testing ###
########################################################################################################################
enable_testing()
add_subdirectory(test)
